--- a/fitboi/pom.xml
+++ b/fitboi/pom.xml
@@ -52,29 +52,37 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <configuration>
-                    <archive>
-                        <manifest>
-                            <!-- Jar file entry point -->
-                            <mainClass>app.Main</mainClass>
-                        </manifest>
-                    </archive>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <classpathPrefix>lib/</classpathPrefix>
+                                <!-- Jar file entry point -->
+                                <mainClass>app.Main</mainClass>
+                            </manifest>
+                            <manifestEntries>
+                                <Class-Path>.</Class-Path>
+                            </manifestEntries>
+                        </archive>
                     </configuration>
-			    </plugin>
+                </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
                     <version>1.6.0</version>
                     <executions>
                         <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
+                            <goals>
+                                <goal>java</goal>
+                            </goals>
                         </execution>
                     </executions>
                     <configuration>
                         <mainClass>app.Main</mainClass>
+                        <manifestEntries>
+                            <Class-Path>.</Class-Path>
+                        </manifestEntries>
                     </configuration>
-                </plugin>
+			    </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
